Fixed z-index with header component

--- a/frontend/src/components/Header/styles/Header.module.scss
+++ b/frontend/src/components/Header/styles/Header.module.scss
@@ -6,7 +6,7 @@
     top: 0px;
     min-width: 100%;
     background-color: white;
-    z-index: 1000;
+    z-index: 100000;
     max-height: 86px;
 
     &::before, &::after {
